--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="box">
-        <img src="./images/image-qr-code.png" alt="">
+        <img src="images/image-qr-code.png" alt="">
         <p class="text1">Improve your front-end skills by building projects</p>
         <p class="text2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
